--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -37,14 +37,14 @@
                 </div>
 
                 <hr>
-                <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
+                <input id="form-button" class="btn btn-warning btn-block" type="submit" value="Save">
             </form>
         </div>
 
         <br>
         <div class="box-element hidden" id="payment-info">
-            <small>Paypal Options</small>
-            <button id="make-payment">Make payment</button>
+            
+            <a href="# " class="btn btn-success w-100" id="make-payment">Buy</a> 
         </div>
         
     </div>
@@ -70,61 +70,8 @@
     </div>
 </div>
 
-<script type="text/javascript">
-    var shipping = '{{order.shipping}}'
-    var total = '{{order.get_cart_total|floatformat:2}}'
-
-    if (shipping == 'False'){
-         document.getElementById('shipping-info').innerHTML = ''
-    }
-    if(user != 'AnonymousUser'){
-        document.getElementById('user-info').innerHTML = ''
-    }
-    if(shipping == 'False' && user != 'AnonymousUser' ){
-        document.getElementById('form-wrapper').classList.add('hidden');
-        document.getElementById('payment-info').classList.remove('hidden');
-    }
-    var form = document.getElementById('form')
-    form.addEventListener('submit', function(e){
-        e.preventDefault()
-        console.log('Form Submitted...')
-        document.getElementById('form-button').classList.add("hidden");
-        document.getElementById('payment-info').classList.remove("hidden");
-})
-        document.getElementById('make-payment').addEventListener('click', function(e){
-            submitFormData()
-    })
-    function submitFormData(){
-        console.log('Payment button clicked')
-
-        var userFormData = {
-            'name':null,
-            'email':null,
-            'total':total
-        }
-        var shippingInfo = {
-            'adress':null,
-            'city':null,
-            'state':null,
-            'zipcode':null
-           
-        }
-        if (shipping != 'False'){
-            shippingInfo.address = form.address.value
-            shippingInfo.city = form.city.value
-            shippingInfo.state = form.state.value
-            shippingInfo.zipcode = form.zipcode.value
-        }
-
-        if (user == 'AnonymousUser'){
-            userFormData.name = form.name.value
-            userFormData.email = form.email.value
-        }
-
-        console.log('Shipping Info:', shippingInfo)
-        console.log('User Info:', userFormData)
-    }
-   
+<script type="text/javascript" src="{% static 'store/js/checkout.js' %}">
+    
 </script>
 
 
