--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -10,25 +10,8 @@
 
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
 
-	<script type="text/javascript">
-		var user = '{{request.user}}'
+	<script type="text/javascript" src="{% static 'store/js/main.js' %}">
 
-		function getToken(name) {
-		    var cookieValue = null;
-		    if (document.cookie && document.cookie !== '') {
-		        var cookies = document.cookie.split(';');
-		        for (var i = 0; i < cookies.length; i++) {
-		            var cookie = cookies[i].trim();
-		            // Does this cookie string begin with the name we want?
-		            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-		                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-		                break;
-		            }
-		        }
-		    }
-		    return cookieValue;
-		}
-		var csrftoken = getToken('csrftoken');
 	</script>
 
 </head>
@@ -48,13 +31,23 @@
 	 
 	    </ul>
 	    <div class="form-inline my-2 my-lg-0">
-	     	<a href="#"class="btn btn-warning">Login</a>
+			
+			
 	     	{% if user.is_authenticated %}
+			 <a href="{% url 'logout' %}" class="btn btn-danger ">Logout</a>
 	     	<a href="{% url 'cart' %}">
+				
 	    		<img  id="cart-icon" src="{% static 'store/img/cart.png' %}">
 	    	</a>
+			
+			
+			{% if order.get_cart_items != 0 %}
 	    	<p id="cart-total">{{order.get_cart_items}}</p>
 			{% endif %}
+			{% else %}
+			<a href="{% url 'login' %}" class="btn btn-warning">Login</a>
+			{% endif %}
+			
 
 	    </div>
 	  </div>
@@ -69,11 +62,9 @@
          </div>
 
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<!-- Пакет JavaScript с Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
 
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <script src="{% static 'store/js/cart.js' %}"></script>
 </body>
